crates/sgf-core/tests/snapshots/ops_planet_entity/model_replace_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Gave planet #3318 the model ocean_paradise_planet_01_entity
inverse: SetBodyModel { body: 3318, entity: Some("previously_terraformed_planet_entity") }

--- gamestate
+++ gamestate
@@ -252298,7 +252298,7 @@
 				}
 			}
 			entity=0
-			entity_name="previously_terraformed_planet_entity"
+			entity_name="ocean_paradise_planet_01_entity"
 			deposits=
 			{
 				2411 2412 2413 2414 2415 2416 2417 2418 2421 2422
